# OpenSMTPD-extras

./: configure.ac
api/: smtpd-api.h  table_stdio.c  util.c
extras/tables/: Makefile.am
extras/tables/table-procexec/: Makefile.am  draft  my-aliases.awk  passwd.pl  table-procexec.c
mk/: table.mk
