include	$(top_srcdir)/mk/paths.mk
include	$(top_srcdir)/mk/table.mk

pkglibexec_PROGRAMS	 = table-procexec

table_procexec_SOURCES	 = table-procexec.c
table_procexec_SOURCES	+= $(top_srcdir)/api/log.c
table_procexec_SOURCES	+= $(top_srcdir)/api/table_api.c
table_procexec_SOURCES	+= $(top_srcdir)/api/tree.c
table_procexec_SOURCES	+= $(top_srcdir)/api/dict.c
table_procexec_SOURCES	+= $(top_srcdir)/api/iobuf.c
table_procexec_SOURCES	+= $(top_srcdir)/api/util.c
